[ADD] - task 5 done

--- a/Laboratorio_4_CNN.ipynb
+++ b/Laboratorio_4_CNN.ipynb
@@ -242,24 +242,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 28, 28)\n",
+      "(10000, 28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_entreno.shape)\n",
+    "print(X_prueba.shape)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_entreno = X_entreno.reshape(60000, 28, 28, 1)\n",
+    "X_prueba = X_prueba.reshape(10000, 28, 28, 1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 28, 28, 1)\n",
+      "(10000, 28, 28, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_entreno.shape)\n",
+    "print(X_prueba.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,31 +297,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.utils import to_categorical"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000,)\n",
+      "(10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_entreno.shape)\n",
+    "print(y_prueba.shape)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_cat_entreno = to_categorical(y_entreno, 10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_cat_prueba = to_categorical(y_prueba, 10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,39 +363,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Conv2D, MaxPool2D, Flatten"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "modelo = Sequential()\n",
+    "modelo.add(Conv2D(filters = 32, kernel_size = (4, 4), input_shape = (28, 28, 1), activation = 'relu'))\n",
+    "modelo.add(MaxPool2D(pool_size = (2, 2)))\n",
+    "modelo.add(Flatten())\n",
+    "modelo.add(Dense(128, activation = 'relu'))\n",
+    "modelo.add(Dense(10, activation = 'softmax'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 25, 25, 32)        544       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 12, 12, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 4608)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               589952    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                1290      \n",
+      " conv2d (Conv2D)             (None, 25, 25, 32)        544       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 12, 12, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 4608)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               589952    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
+      "                                                                 \n",
       "=================================================================\n",
       "Total params: 591,786\n",
       "Trainable params: 591,786\n",
@@ -359,7 +417,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "modelo.compile(loss = 'categorical_crossentropy',\n",
+    "              optimizer = 'rmsprop',\n",
+    "              metrics = ['accuracy'])\n",
+    "modelo.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
