[ADD] - task 6 completed

--- a/Laboratorio_4_CNN.ipynb
+++ b/Laboratorio_4_CNN.ipynb
@@ -53,22 +53,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "29515/29515 [==============================] - 0s 3us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "26421880/26421880 [==============================] - 3s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "5148/5148 [==============================] - 0s 0s/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "4422102/4422102 [==============================] - 1s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import fashion_mnist\n",
     "\n",
@@ -86,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1bf55a508e0>"
+       "<matplotlib.image.AxesImage at 0x23e53acee30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +130,7 @@
        "(28, 28)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +159,7 @@
        "255"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1bf55a9b700>"
+       "<matplotlib.image.AxesImage at 0x23e55bcf700>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -442,39 +427,41 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 5s 86us/step - loss: 0.1802 - acc: 0.9365\n",
+      "1875/1875 [==============================] - 20s 10ms/step - loss: 0.4027 - accuracy: 0.8584 - val_loss: 0.3246 - val_accuracy: 0.8858\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 5s 87us/step - loss: 0.1679 - acc: 0.9395\n",
+      "1875/1875 [==============================] - 23s 12ms/step - loss: 0.2791 - accuracy: 0.8997 - val_loss: 0.3008 - val_accuracy: 0.8947\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 5s 88us/step - loss: 0.1579 - acc: 0.9439\n",
+      "1875/1875 [==============================] - 22s 11ms/step - loss: 0.2418 - accuracy: 0.9138 - val_loss: 0.2898 - val_accuracy: 0.8972\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 5s 87us/step - loss: 0.1502 - acc: 0.9469\n",
+      "1875/1875 [==============================] - 21s 11ms/step - loss: 0.2168 - accuracy: 0.9227 - val_loss: 0.2728 - val_accuracy: 0.9050\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 5s 86us/step - loss: 0.1427 - acc: 0.9496\n",
+      "1875/1875 [==============================] - 21s 11ms/step - loss: 0.2007 - accuracy: 0.9280 - val_loss: 0.2840 - val_accuracy: 0.9028\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 5s 87us/step - loss: 0.1397 - acc: 0.9523\n",
+      "1875/1875 [==============================] - 20s 10ms/step - loss: 0.1846 - accuracy: 0.9346 - val_loss: 0.3018 - val_accuracy: 0.9032\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 5s 87us/step - loss: 0.1312 - acc: 0.9551\n",
+      "1875/1875 [==============================] - 20s 11ms/step - loss: 0.1724 - accuracy: 0.9399 - val_loss: 0.2945 - val_accuracy: 0.9081\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 5s 86us/step - loss: 0.1274 - acc: 0.9559\n",
+      "1875/1875 [==============================] - 19s 10ms/step - loss: 0.1617 - accuracy: 0.9431 - val_loss: 0.2930 - val_accuracy: 0.9088\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 5s 84us/step - loss: 0.1238 - acc: 0.9582\n",
+      "1875/1875 [==============================] - 20s 10ms/step - loss: 0.1533 - accuracy: 0.9459 - val_loss: 0.3223 - val_accuracy: 0.9037\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 5s 84us/step - loss: 0.1201 - acc: 0.9588\n"
+      "1875/1875 [==============================] - 21s 11ms/step - loss: 0.1461 - accuracy: 0.9488 - val_loss: 0.3415 - val_accuracy: 0.9105\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2c18a60e400>"
+       "<keras.callbacks.History at 0x23e52d95540>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "modelo.fit(X_entreno, y_cat_entreno, epochs = 10, validation_data = (X_prueba,y_cat_prueba))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,20 +474,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['loss', 'acc']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -554,33 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.86      0.85      0.85      1000\n",
-      "          1       0.99      0.97      0.98      1000\n",
-      "          2       0.88      0.83      0.85      1000\n",
-      "          3       0.91      0.91      0.91      1000\n",
-      "          4       0.83      0.88      0.85      1000\n",
-      "          5       0.97      0.98      0.98      1000\n",
-      "          6       0.73      0.76      0.74      1000\n",
-      "          7       0.95      0.97      0.96      1000\n",
-      "          8       0.99      0.97      0.98      1000\n",
-      "          9       0.98      0.94      0.96      1000\n",
-      "\n",
-      "avg / total       0.91      0.91      0.91     10000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
